--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="ko")
+html(lang="en")
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
@@ -7,4 +7,5 @@ html(lang="ko")
     title Noom
   body
     h1 It works!
+    script(src="/public/js/app.js")
     
