--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,9 +10,14 @@ html(lang="en")
     header 
       h1 Noom 
     main 
-      div#welcome 
+      #welcome 
         form
           input(placeholder="room name", required, type="text")
           button Enter Room
+      #room 
+        ul 
+        form
+          input(placeholder="message", required, type="text")
+          button Send
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
